2015-12-05 - 1.2.0:
 - Bump to Mesos-DNS 0.5.1
 - Use ubuntu-base 1.0.2
 - Add logrotate support

2015-10-19 - 1.1.0:
  - Mesos DNS bumped to 0.4.0
  - Reworked Dockerfile to use binary instead of compiling
  - Fixed minor error in docs