@@ -1,6 +1,6 @@
 ################################################################################
-# mesos-dns:1.2.0
-# Date: 12/05/2015
+# mesos-dns:1.2.1
+# Date: 12/18/2015
 # Mesos-DNS Version: 0.5.1
 #
 # Description:
