@@ -1,3 +1,6 @@
+2015-12-18 - 1.2.1:
+ - Fixed bug with ipsources not being added correctly.
+
 2015-12-05 - 1.2.0:
  - Bump to Mesos-DNS 0.5.1
  - Use ubuntu-base 1.0.2
